# xlayer-ai

./: .gitignore
XLAYER-HACKING CO/: ANALYSIS_STRENGTH_WEAKNESS_IMPROVEMENT.md  COORDINATOR_INTEGRATION_WHAT_HAPPENS.md  DEEP_ENGINEERING_AUDIT_REPORT.md  FULL_FILE_ANALYSIS_REPORT.md  PROJECT_WHOLE_OVERVIEW.md  TARGET_FLOW_DEEP_ANALYSIS.md  WHOLE_PROJECT_REPORT.md  WHOLE_PROJECT_REPORT_EN.md  WORK_REPORT.md  pyproject.toml
XLAYER-HACKING CO/reports/: full_file_audit_report_20260302.md  static_file_audit_20260302.json  xlayer_report_20260301_044526.html  xlayer_report_20260301_044526.json  xlayer_report_20260301_044547.html  xlayer_report_20260301_044547.json
XLAYER-HACKING CO/src/: __init__.py
XLAYER-HACKING CO/xlayer_ai/: .env.example  CHANGELOG.md  CODING_SUMMARY.md  FILE_ANALYSIS_DETAILS.md  README.md  __init__.py  main.py  mcp_config.json  requirements.txt
XLAYER-HACKING CO/xlayer_ai/chain/: __init__.py
XLAYER-HACKING CO/xlayer_ai/config/: __init__.py  settings.py
XLAYER-HACKING CO/xlayer_ai/coordinator/: __init__.py  session_manager.py  swarm.py
XLAYER-HACKING CO/xlayer_ai/core/: COORDINATOR_RESULT_DEEP_ANALYSIS.md  __init__.py  coordinator_result.py  exploit.py  planner.py  recon.py  reporter.py
XLAYER-HACKING CO/xlayer_ai/engine/: __init__.py  agent.py  agent_spawner.py  agentic_loop.py  attack_machine.py  cross_synthesis.py  dedup.py  discovery_monitor.py  domain_scorer.py  knowledge_store.py  llm.py  memory.py  messages.py  pipeline.py  tool.py
XLAYER-HACKING CO/xlayer_ai/llm/: README.md  __init__.py  cloud_config.json  config_manager.py  (+9 more)
(+188 files in other folders)
