[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xlayer-ai"
version = "0.1.0"
description = "XLayer AI — Autonomous Web Vulnerability Hunter"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "loguru>=0.7.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "openai>=1.10.0",
    "google-generativeai>=0.8.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
]

[project.scripts]
xlayer-ai = "xlayer_ai.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["xlayer_ai*"]
